# infinimath

./: Cargo.toml  README.md  miners_results.csv
common/: Cargo.toml
imc/: Cargo.toml
imc/src/: blockchain.rs
imc/test_keys/: alice_key.txt  bob_key.txt  miner1_key.txt  miner2_key.txt
src/: main.rs  test_miners.rs  wallet.rs
subchains/: Cargo.toml  mod.rs
subchains/src/: lib.rs  subchain.rs  subchain_block.rs  subchain_block_time.rs  subchain_pow.rs
subchains/src/utils/: pix.rs  primex.rs
